--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-simple-typewriter": "^4.0.4",
     "react-social-icons": "^5.15.0",
+    "tailwind-scrollbar": "^2.0.1",
     "tsconfig.json": "^1.0.11"
   },
   "devDependencies": {
