--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.11",
+    "clsx": "^2.1.1",
     "framer-motion": "^7.5.2",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -18,7 +19,8 @@
     "react-simple-typewriter": "^4.0.4",
     "react-social-icons": "^5.15.0",
     "tailwind-scrollbar": "^2.0.1",
-    "tsconfig.json": "^1.0.11"
+    "tsconfig.json": "^1.0.11",
+    "tw-merge": "^0.0.1-alpha.3"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
